# mlops-trading

./: .dockerignore  .gcloudignore  Dockerfile  Jenkinsfile  README.md  api.py  docker-compose.yml  main.py  predict.py  pyproject.toml  update_data.py
data/: eth_raw_data.csv  eth_with_indicators.csv
k8s/: pod-template.yml  python-deployment.yml  python-namespace.yml  python-service-monitor.yml  python-service.yml
models/: eth_price_predictor.pkl  ethusdt_price_predictor.pkl
