[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "python-binance>=1.0.29",
    "seaborn>=0.13.2",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "loguru>=0.7.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[tool.setuptools]
py-modules = ["main", "predict", "api"]

[tool.setuptools.packages.find]
exclude = ["k8s*", "data*", "models*", "*.egg-info"]
